fix: Hide scrollbars for mermaid diagrams

--- a/docs/src/custom-styles.css
+++ b/docs/src/custom-styles.css
@@ -1,5 +1,6 @@
 html::-webkit-scrollbar,
 #starlight__sidebar::-webkit-scrollbar,
-.dialog-frame::-webkit-scrollbar {
+.dialog-frame::-webkit-scrollbar,
+.mermaid::webkit-scrollbar {
   display: none;
 }
